降低版本为jdk8，修复removeLast()/List.of()带来的问题